--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,11 +16,10 @@ security:
         main:
             anonymous: ~
             provider: db_provider
+            form_login:
+                login_path: app_login_index
+                check_path: app_login_index
 
-            # activate different ways to authenticate
-
-            # http_basic: ~
-            # https://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/login,          roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register,       roles: IS_AUTHENTICATED_ANONYMOUSLY }
