--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,9 @@ services:
         public: false       # Allows optimizing the container by removing unused services; this also means
                             # fetching services directly from the container via $container->get() won't work.
                             # The best practice is to be explicit about your dependencies anyway.
+        bind:
+            $imagesDir: '%kernel.project_dir%/public/uploads'
+            $publicDir: '%kernel.project_dir%/public'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
