--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": "^7.1.3",
         "ext-gd": "*",
         "ext-iconv": "*",
-        "ext-sqlite3": "*",
+        "ext-pdo_sqlite": "*",
         "ramsey/uuid": "^3.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^4.0",
